--- a/src/styles/components/layout/_titlebar.mobile.css
+++ b/src/styles/components/layout/_titlebar.mobile.css
@@ -12,14 +12,13 @@
     margin-left: 3rem;
   }
   .title-bar__menu-icon {
-    top: 0.35rem;
     font-size: 1.8rem;
   }
 }
 /*** 380px ***/
 @media only screen and (--small-screen) {
-  .title-bar { font-size: 1.2rem; }
-  .title-bar__menu-icon { font-size: 1.5rem; }
+  .title-bar { font-size: 1.4rem; }
+  .title-bar__menu-icon { font-size: 1.7rem; }
 }
 /*** 320px ***/
 @media only screen and (--tiny-screen) {
